[package]
name = "bwoverlay-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.217"
reqwest = { version = "0.12.12", features = ["json"] }
simple_logger = "5.0.0"
log = "0.4.25"
dirs = "6.0.0"
serde_json = "1.0.138"
hotwatch = "0.5.0"
regex = "1.11.1"
